<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/auto_focus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="false"
            android:text="@string/auto_focus"
            android:textColor="@color/cardview_light_background" />

        <CheckBox
            android:id="@+id/use_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="false"
            android:text="@string/use_flash"
            android:textColor="@color/cardview_light_background" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/read_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_barcode" />

        <Button
            android:id="@+id/btnScienceQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toResearch"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:id="@+id/status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barcode_header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        app:autoSizeTextType="none" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/barcode_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>